fixes to parsing query/path params
