# internal/api/handlers/get_dates.go
@@ -1,15 +1,14 @@
 package handlers
 
 import (
-	"context"
 	"event-schedule/internal/api"
 	"event-schedule/internal/lib/logger/sl"
 	"log/slog"
 	"net/http"
 	"strconv"
 
+	"github.com/go-chi/chi"
 	"github.com/go-chi/chi/middleware"
-	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 )
 
@@ -17,6 +16,7 @@ import (
 //
 //	@Summary		Get vacant intervals
 //	@Description	Responds with free dates within month for selected suite.
+//	@ID				getDatesBySuiteID
 //	@Tags			events
 //	@Produce		json
 //	@Param			user_id	path	int	true	"user_id"	Format(int64) default(1234)
@@ -26,26 +26,27 @@ import (
 //	@Failure		404	{object}	api.GetVacantDatesResponse
 //	@Failure		422	{object}	api.GetVacantDatesResponse
 //	@Failure		503	{object}	api.GetVacantDatesResponse
-//	@Router			/events/{user_id}/{suite_id}/get-vacant-dates [get]
-func (i *Implementation) GetVacantDates(log *slog.Logger, ctx context.Context) http.HandlerFunc {
+//	@Router			/{user_id}/{suite_id}/get-vacant-dates [get]
+func (i *Implementation) GetVacantDates(log *slog.Logger) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		const op = "handlers.events.api.GetVacantDates"
-		var suiteID string
-		var id int64
-		var err error
+
+		ctx := r.Context()
 
 		log = log.With(
 			slog.String("op", op),
 			slog.String("request_id", middleware.GetReqID(ctx)),
 		)
 
-		if suiteID = chi.URLParam(r, "suiteID"); suiteID == "" {
+		suiteID := chi.URLParam(r, "suite_id")
+		if suiteID == "" {
 			log.Error("invalid request", sl.Err(api.ErrNoSuiteID))
 			render.Render(w, r, api.ErrInvalidRequest(api.ErrNoSuiteID))
 			return
 		}
 
-		if id, err = strconv.ParseInt(suiteID, 10, 64); err != nil {
+		id, err := strconv.ParseInt(suiteID, 10, 64)
+		if err != nil {
 			log.Error("invalid request", sl.Err(err))
 			render.Render(w, r, api.ErrInvalidRequest(err))
 			return
