# internal/api/handlers/get_event.go
@@ -1,7 +1,6 @@
 package handlers
 
 import (
-	"context"
 	"event-schedule/internal/api"
 	"event-schedule/internal/lib/logger/sl"
 	"event-schedule/internal/model"
@@ -15,7 +14,8 @@ import (
 // GetEvent godoc
 //
 //	@Summary		Get event info
-//	@Description	Responds with event info with given EventID
+//	@Description	Responds with event info with given EventID.
+//	@ID				getEventbyTag
 //	@Tags			events
 //	@Produce		json
 //	@Param			user_id	path	int	true	"user_id"	Format(int64) default(1234)
@@ -25,10 +25,12 @@ import (
 //	@Failure		404	{object}	api.GetEventResponse
 //	@Failure		422	{object}	api.GetEventResponse
 //	@Failure		503	{object}	api.GetEventResponse
-//	@Router			/events/{user_id}/{event_id}/get [get]
-func (i *Implementation) GetEvent(log *slog.Logger, ctx context.Context) http.HandlerFunc {
+//	@Router			/{user_id}/{event_id}/get [get]
+func (i *Implementation) GetEvent(log *slog.Logger) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		const op = "handlers.events.api.GetEvent"
+
+		ctx := r.Context()
 
 		log = log.With(
 			slog.String("op", op),
@@ -40,8 +42,14 @@ func (i *Implementation) GetEvent(log *slog.Logger, ctx context.Context) http.Ha
 		// context because this handler is a child of the EventCtx
 		// middleware. The worst case, the recoverer middleware will save us.
 		event := ctx.Value("event").(*model.EventInfo)
+		if event == nil {
+			log.Error("failed to load event from context", sl.Err(api.ErrEventNotFound))
+			render.Render(w, r, api.ErrInternalError(api.ErrEventNotFound))
+			return
+		}
 
-		if err := render.Render(w, r, api.GetEventResponseAPI(event)); err != nil {
+		err := render.Render(w, r, api.GetEventResponseAPI(event))
+		if err != nil {
 			log.Error("internal error", sl.Err(err))
 			render.Render(w, r, api.ErrRender(err))
 			return
