# internal/api/handlers/update_event.go
@@ -1,23 +1,24 @@
 package handlers
 
 import (
-	"context"
 	"event-schedule/internal/api"
 	"event-schedule/internal/convert"
 	"event-schedule/internal/lib/logger/sl"
 	"event-schedule/internal/model"
 	"log/slog"
 	"net/http"
+	"strconv"
 
 	"github.com/go-chi/chi/middleware"
+	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 )
 
 // UpdateEvent godoc
 //
 //	@Summary		Updates event info
-//	@Description	Updates an existing Event with given EventID and several optional fields. At least one field should not be empty.
-//	NotificationPeriod must look like {number}s,{number}m or {number}h.
+//	@Description	Updates an existing Event with given EventID and several optional fields. At least one field should not be empty. NotificationPeriod must look like {number}s,{number}m or {number}h.
+//	@ID				modifyEventByJSON
 //	@Tags			events
 //	@Accept			json
 //	@Produce		json
@@ -29,10 +30,12 @@ import (
 //	@Failure		404	{object}	api.UpdateEventResponse
 //	@Failure		422	{object}	api.UpdateEventResponse
 //	@Failure		503	{object}	api.UpdateEventResponse
-//	@Router			/events/{user_id}/{event-id}/update [patch]
-func (i *Implementation) UpdateEvent(log *slog.Logger, ctx context.Context) http.HandlerFunc {
+//	@Router			/{user_id}/{event_id}/update [patch]
+func (i *Implementation) UpdateEvent(log *slog.Logger) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		const op = "handlers.events.api.UpdateEvent"
+
+		ctx := r.Context()
 
 		log = log.With(
 			slog.String("op", op),
@@ -41,9 +44,15 @@ func (i *Implementation) UpdateEvent(log *slog.Logger, ctx context.Context) http
 
 		//TODO: getters for EventInfo
 		event := r.Context().Value("event").(*model.EventInfo)
+		if event == nil {
+			log.Error("failed to load event from context", sl.Err(api.ErrEventNotFound))
+			render.Render(w, r, api.ErrInternalError(api.ErrEventNotFound))
+			return
+		}
 
 		req := &api.UpdateEventRequest{}
-		if err := render.Bind(r, req); err != nil {
+		err := render.Bind(r, req)
+		if err != nil {
 			log.Error("failed to decode request body", sl.Err(err))
 			render.Render(w, r, api.ErrInvalidRequest(err))
 			return
@@ -51,14 +60,24 @@ func (i *Implementation) UpdateEvent(log *slog.Logger, ctx context.Context) http
 
 		log.Info("request body decoded", slog.Any("req", req))
 
-		err := i.Service.UpdateEvent(ctx, convert.ToUpdateEventInfo(req, event.EventID))
+		userID := chi.URLParam(r, "user_id")
+		if userID == "" {
+			log.Error("invalid request", sl.Err(api.ErrNoUserID))
+			render.Render(w, r, api.ErrInvalidRequest(api.ErrNoUserID))
+		}
+
+		id, err := strconv.ParseInt(userID, 10, 64)
+		if err != nil {
+			log.Error("invalid request", sl.Err(err))
+			render.Render(w, r, api.ErrInvalidRequest(err))
+		}
+
+		err = i.Service.UpdateEvent(ctx, convert.ToUpdateEventInfo(req, event.EventID, id))
 		if err != nil {
 			log.Error("internal error", sl.Err(err))
 			render.Render(w, r, api.ErrInternalError(err))
 			return
 		}
-		//i.Service.UpdateEvent(event.Uuid, data.EventInfo) резервный вариант
-		//обработка ошибки
 
 		log.Info("event updated", slog.Any("id", event.EventID))
 
