# internal/app/app.go
@@ -89,16 +89,15 @@ func (a *App) setupRouter(impl *handlers.Implementation, ctx context.Context) {
 
 	// RESTy routes for "events" resource
 	a.router.Route("/events/{user_id}", func(r chi.Router) {
-		r.Post("/add", impl.AddEvent(a.serviceProvider.log, ctx))                                 // POST /events/u123
-		r.Get("/{interval}", impl.GetEvents(a.serviceProvider.log, ctx))                          // GET /events/u123/get/{interval}
-		r.Get("/get-vacant-rooms/{start}-{end}", impl.GetVacantRooms(a.serviceProvider.log, ctx)) // GET /events/u123/get-vacant-rooms
-		r.Get("/{suite_id}/get-vacant-dates", impl.GetVacantDates(a.serviceProvider.log, ctx))    // GET /events/u123/get-vacant-dates
-
+		r.Post("/add", impl.AddEvent(a.serviceProvider.log))                              // POST /events/u123
+		r.Get("/", impl.GetEvents(a.serviceProvider.log))                                 // GET /events/u123/get/{interval}
+		r.Get("/get-vacant-rooms", impl.GetVacantRooms(a.serviceProvider.log))            // GET /events/u123/get-vacant-rooms
+		r.Get("/{suite_id}/get-vacant-dates", impl.GetVacantDates(a.serviceProvider.log)) // GET /events/u123/get-vacant-dates
 		r.Route("/{event_id}", func(r chi.Router) {
-			r.Use(impl.EventCtx(a.serviceProvider.log, ctx)) // Load the *Event on the request context
-			r.Get("/get", impl.GetEvent(a.serviceProvider.log, ctx))
-			r.Patch("/update", impl.UpdateEvent(a.serviceProvider.log, ctx))  // PATCH /event/123/update
-			r.Delete("/delete", impl.DeleteEvent(a.serviceProvider.log, ctx)) // DELETE /event/123/delete
+			r.Use(impl.EventCtx(a.serviceProvider.log)) // Load the *Event on the request context
+			r.Get("/get", impl.GetEvent(a.serviceProvider.log))
+			r.Patch("/update", impl.UpdateEvent(a.serviceProvider.log))  // PATCH /event/123/update
+			r.Delete("/delete", impl.DeleteEvent(a.serviceProvider.log)) // DELETE /event/123/delete
 		})
 
 		// GET /articles/whats-up
